--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="camera">Camera</string>
     <string name="add_photo_preview">preview</string>
     <string name="zaqbook">ZaqBook</string>
+    <string name="logo">logo</string>
 </resources>
